--- a/src/global.css
+++ b/src/global.css
@@ -1,18 +1,17 @@
-<style>
-:global(:root) {
+:root {
   --no-hue: 180;
   --no-saturation: 100%;
   --no-lightness: 45%;
   --no-color: hsl(var(--no-hue), var(--no-saturation), var(--no-lightness));
 }
 
-:global(html, body) {
+html, body {
   position: relative;
   width: 100%;
   height: 100%;
 }
 
-:global(body) {
+body {
   color: #333;
   margin: 0;
   padding: 2em;
@@ -20,7 +19,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-:global(input, button, select) {
+input, button, select {
   font-family: inherit;
   font-size: inherit;
   padding: 0.4em;
@@ -30,25 +29,25 @@
   border-radius: 2px;
 }
 
-:global(button) {
+button {
   color: #333;
   background-color: #f4f4f4;
   outline: none;
 }
 
-:global(button:active) {
+button:active {
   background-color: #ddd;
 }
 
-:global(button:focus) {
+button:focus {
   border-color: #666;
 }
 
-:global(input[type="checkbox"], label, select) {
+input[type="checkbox"], label, select {
   cursor: pointer;
 }
 
-:global(.fixed) {
+.fixed {
   position: fixed;
   padding: 0.5rem;
   background-color: whitesmoke;
@@ -58,27 +57,26 @@
   transition: opacity 0.5s;
 }
 
-:global(.fixed:not(:hover)) {
+.fixed:not(:hover) {
   opacity: 0.75;
 }
 
-:global(.fixed button) {
+.fixed button {
   background-color: white;
   margin-bottom: 0;
 }
 
 @media (prefers-color-scheme: dark) {
-  :global(:root) {
+  :root {
     --no-saturation: 75%;
     --no-lightness: 30%;
   }
 
-  :global(body) {
+  body {
     background-color: #222;
   }
 
-  :global(.fixed:not(:hover)) {
+  .fixed:not(:hover) {
     opacity: 0.5;
   }
 }
-</style>
